fixed config profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -142,6 +142,8 @@ try {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
+
+
 // Load nf-core/hic custom profiles from different institutions.
 // Warning: Uncomment only if a pipeline-specific instititutional config already exists on nf-core/configs!
 // try {
@@ -247,6 +249,7 @@ profiles {
     }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
+    uppmax    { includeConfig 'conf/uppmax.config'    }
 }
 
 
